<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/item_home" />

        <item
            android:id="@+id/item_vip"
            android:checkable="false"
            android:icon="@drawable/ic_nav_vip"
            android:title="@string/item_vip" />

        <item
            android:id="@+id/item_download"
            android:checkable="false"
            android:icon="@drawable/ic_nav_download"
            android:title="@string/item_downloaded" />


    </group>


    <group
        android:id="@+id/group_user"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_favourite"
            android:icon="@drawable/ic_nav_star"
            android:title="@string/item_favourite" />

        <item
            android:id="@+id/item_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/item_history" />


        <item
            android:id="@+id/item_group"
            android:icon="@drawable/ic_nav_people"
            android:title="@string/item_group" />
        <item
            android:id="@+id/item_tracker"
            android:icon="@drawable/ic_nav_account"
            android:title="@string/item_tracker" />

    </group>


    <group android:checkableBehavior="single">


        <item
            android:id="@+id/item_theme"
            android:checkable="false"
            android:icon="@drawable/ic_nav_color"
            android:title="@string/item_theme" />

        <item
            android:id="@+id/item_app"
            android:checkable="false"
            android:icon="@drawable/ic_nav_shop"
            android:title="@string/item_app" />


        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/item_settings" />

    </group>

</menu>